CSS reset ver2.0
반응형 웹 페이지 만들기에서 소개한 CSS reset

--- a/SeoulJesusLoveChurch/index.html
+++ b/SeoulJesusLoveChurch/index.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Seoul Jesus Love Church :D</title>
-  </head>
-  <body>
+<html lang="ko">
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,user-scalable=no">
+  <title>Welcome to Seoul Jesus Love Church :D</title>
+  <link rel="stylesheet" type="text/css" href="../css/cssReset_2.0.css">
+  <style media="screen">
+    /* mobile CSS */
+    /* base CSS */
+
+    .container {
+      width: 90%;
+      max-width: 1132px;
+      margin: 0 auto;
+    }
+
+    .cfixed:after,
+    .container:after {
+      display: block;
+      content: "";
+      clear: both;
+    }
+
+    .blind {
+      position: absolute;
+      width: 0;
+      height: 0;
+      line-height: 0;
+      text-indent: -9999px;
+      overflow: hidden;
+    }
+
+    .sec-tit {
+      font-size: 42px;
+      color: #3f51b5;
+      font-weight: normal;
+    }
+
+    .divider {
+      width: 90%;
+      max-width: 1132px;
+      margin: 0 auto;
+      margin-top: 77px;
+      background: #eee;
+    }
+
+    .m-divider {
+      width: 20px;
+      margin: 0 auto;
+      margin-top: 77px;
+      background: #3f51b5;
+    }
+
+    /* tablet CSS */
+
+    @media all and (min-width:768px) {
+      .divider {
+        margin-top: 124px;
+      }
+
+      .m-divider {
+        margin-top: 124px;
+      }
+    }
+
+    /* PC CSS */
+
+    @media all and (min-width:1132px) {}
+  </style>
+  <script src="../js/jquery-3.2.1.min.js">
+  </script>
+</head>
+
+<body>
+  <div id="wrap">
+
+  </div>
+</body>
+
 </html>
