--- a/SeoulJesusLoveChurch/index.html
+++ b/SeoulJesusLoveChurch/index.html
@@ -4,24 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1,user-scalable=no">
-  <title>Welcome to Seoul Jesus Love Church :D</title>
-  <link rel="stylesheet" type="text/css" href="../css/cssReset_2.0.css">
+  <title>We love Jesus! :D</title>
+  <link rel="stylesheet" type="text/css" href="css/cssReset_2.0.css">
   <style media="screen">
     /* mobile CSS */
-
     /* base CSS */
-
     .container {
       width: 90%;
       max-width: 1132px;
       margin: 0 auto;
-    }
-
-    .cfixed:after,
-    .container:after {
-      display: block;
-      content: "";
-      clear: both;
     }
 
     .blind {
@@ -54,20 +45,63 @@
       background: #3f51b5;
     }
 
+    /* yk.oramdeo declare */
+    body{
+      font-family: "나눔고딕","맑은고딕",Sans-serif, Helvetica;
+    }
+
+    .full {
+      width: 90%;
+      margin: 0 auto;
+      padding : 0;
+    }
+
+    .clearfixed:after,
+    .container:after {
+      display: block;
+      content: "";
+      clear: both;
+    }
+
     /* header section */
-    .header{
-      position:relative;
-      padding:18px 5%;
+
+    .header {
+      width: 100%;
+      height: 100%;
+      border-bottom:1px solid #000;
     }
 
-    .header .logo{
+    .header .full .logo a img {
+      display: inline-block;
+      float: left;
+      width: 20%;
+      padding-top:1.75%;
+    }
+
+    .header .full .gnb_ul{
+      float:right;
+      width: 70%;
+      height: 100%;
+      font-size: 1.25em;
+      font-weight: 500;
+      font-style: normal;
+    }
+
+    .header .full .gnb_ul li{
+      display: inline-block;
       float:left;
+      padding-top: 4%;
+      padding-bottom: 4%;
+      margin-left: 5%;
     }
 
-    .header .logo a{
-      font-size: 26px;
-      color:#3f51b5;
-      font-weight: normal;
+    .header .full .gnb_ul li a{
+      color:#3c3c3c;
+      letter-spacing: -0.025em;
+    }
+
+    .slider img {
+      width: 50%;
     }
 
     /* tablet CSS */
@@ -93,22 +127,28 @@
 <body>
   <div id="wrap">
 
-    <header class="header cfixed">
-      <h1 class="logo"><a href>서울예수사랑교회</a></h1>
-      <nav>
-        <ul class="gnb">
-          <li><a href="">환영합니다</a></li>
-          <li><a href="">소개합니다</a></li>
-          <li><a href="">예배와 말씀</a></li>
-          <li><a href="">사역과 선교</a></li>
-          <li><a href="">성도와 교제</a></li>
-        </ul>
-      </nav>
-      <span class="menu-toggle-btn">
+    <header class="header clearfixed">
+      <div class="full">
+        <div class="logo">
+          <a href>
+          <img src="resource/main_logo_ver2.1.png" alt="서울예수사랑교회 헤더 로고">
+          </a>
+        </div>
+        <nav>
+          <ul class="gnb_ul">
+            <li><a href="">환영합니다</a></li>
+            <li><a href="">소개합니다</a></li>
+            <li><a href="">예배와 말씀</a></li>
+            <li><a href="">사역과 선교</a></li>
+            <li><a href="">성도와 교제</a></li>
+          </ul>
+        </nav>
+        <span class="menu-toggle-btn">
         <span></span>
-      <span></span>
-      <span></span>
-      </span>
+        <span></span>
+        <span></span>
+        </span>
+      </div>
     </header>
 
     <article class="slider">
