--- a/SeoulJesusLoveChurch/index.html
+++ b/SeoulJesusLoveChurch/index.html
@@ -46,15 +46,16 @@
     }
 
     /* yk.oramdeo declare */
-    body{
+    body {
       min-width: 320px;
-      font-family: "나눔고딕","맑은고딕",Sans-serif, Helvetica;
+      font-family: "나눔고딕", "맑은고딕", Sans-serif, Helvetica;
+      font-size: 1em;
     }
 
     .full_width {
       max-width: 90%;
       margin: 0 auto;
-      padding : 0;
+      padding: 0;
     }
 
     .clearfixed:after,
@@ -65,69 +66,85 @@
     }
 
     /* header section */
-
     .header {
       width: 100%;
       height: 100%;
-      border-bottom:1px solid #000;
+      border-bottom: 1px solid #000;
     }
 
     .header .full_width .logo a img {
       display: inline-block;
       float: left;
-      position:relative;
-      width:150px;
-      left:50%;
+      position: relative;
+      width: 150px;
+      left: 50%;
       margin-left: -75px;
-      padding-top:2%;
+      padding-top: 2%;
     }
 
-    .header .full_width .gnb_ul{
+    .header .full_width .gnb_ul {
       display: none;
-      top:100%;
-      left:0;
-      width:100%;
+      top: 100%;
+      left: 0;
+      width: 100%;
       background: transparent;
     }
 
-    .header .full_width .gnb_ul li{
+    .header .full_width .gnb_ul li {
       display: inline-block;
-      float:left;
+      float: left;
       padding-top: 4%;
       padding-bottom: 4%;
       margin-left: 2%;
     }
 
-    .header .full_width .gnb_ul li a{
-      color:#3c3c3c;
+    .header .full_width .gnb_ul li a {
+      color: #3c3c3c;
       letter-spacing: -0.025em;
     }
 
     .header .full_width .menu-toggle-btn {
       display: block;
-      float:right;
-      width:20px;
+      float: right;
+      width: 20px;
       margin-top: 4%;
-      cursor:pointer;
+      cursor: pointer;
     }
 
-    .header .full_width .menu-toggle-btn span{
+    .header .full_width .menu-toggle-btn span {
       display: block;
-      width:100%;
-      height:2px;
+      width: 100%;
+      height: 2px;
       background: #3f51b5;
     }
 
-    .header .full_width .menu-toggle-btn span:nth-child(2){
-      margin:5px 0;
+    .header .full_width .menu-toggle-btn span:nth-child(2) {
+      margin: 5px 0;
     }
 
     .slider img {
       width: 50%;
     }
 
-    /* tablet CSS */
+    /* footer section */
+    .footer {
+      position: absolute;
+      width: 100%;
+      height: auto;
+      background: #3b3838;
+    }
 
+    .footer_box{
+      padding: 3% 0;
+      color: #a6a6a6;
+      font-weight: 500;
+    }
+
+    .footer_box .logo a img {
+      width:25%;
+    }
+
+    /* tablet CSS */
     @media all and (min-width:768px) {
       .divider {
         margin-top: 124px;
@@ -139,7 +156,7 @@
 
       .header .full_width .logo a img {
         width: 35%;
-        left:50%;
+        left: 50%;
         margin-left: -86.1px;
       }
 
@@ -149,15 +166,14 @@
     }
 
     /* PC CSS */
-
     @media all and (min-width:1024px) {
       .header .full_width .logo a img {
-        width:17%;
-        left:0%;
+        width: 17%;
+        left: 0%;
         margin-left: 0;
       }
 
-      .header .full_width .gnb_ul{
+      .header .full_width .gnb_ul {
         display: block !important;
         float: right;
         width: 75%;
@@ -167,22 +183,48 @@
         font-style: normal;
       }
 
-      .header .full_width .gnb_ul li{
+      .header .full_width .gnb_ul li {
         margin-left: 6%;
       }
 
       .header .full_width .menu-toggle-btn {
         display: none;
       }
+
+      .footer_box .logo a img{
+        float:left;
+        margin-left: 1%;
+      }
+
+      .footer_box .info{
+        float:left;
+        padding-top: 1%;
+        margin-left: 7%;
+      }
+
+      .footer_box .info #tel {
+        display: inline-block;
+        float: left;
+        margin: 2% 0;
+      }
+      .footer_box .info #fax {
+        display: inline-block;
+        margin: 2% 0;
+        margin-left: 5%;
+      }
+      .footer_box .info #copyright{
+        font-size: 0.75em;
+      }
+
     }
 
     @media all and (min-width:1185px) {
-      .header .full_width .gnb_ul li{
+      .header .full_width .gnb_ul li {
         margin-left: 8%;
       }
     }
   </style>
-  <script src="../js/jquery-3.2.1.min.js">
+  <script src="js/jquery-3.2.1.min.js">
   </script>
 </head>
 
@@ -262,7 +304,19 @@
     </section>
 
     <footer class="footer">
-      <p class="copyright">서울예수사랑교회</p>
+      <div class="footer_box full_width clearfixed">
+        <div class="logo">
+          <a href="#">
+            <img src="resource/sub_logo_ver3.0.png" alt="서울예수사랑교회 서브 로고">
+          </a>
+        </div>
+        <div class="info">
+          <p id="address">01125 서울특별시 강북구 도봉로 225 2층 (미아동 206-10)</p>
+          <p id="tel">Tel. 010 - 0000 - 0000</p>
+          <p id="fax">Fax. 070 - 0000 - 0000</p>
+          <p id="copyright">Copyright ⓒ SEOUL JESUS LOVE CHURCH. ALL RIGHTS RESERVED</p>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
