Project_Modify gradient background  and small_box image

--- a/SeoulJesusLoveChurch/index.html
+++ b/SeoulJesusLoveChurch/index.html
@@ -53,7 +53,7 @@
     }
 
     .full_width {
-      max-width: 90%;
+      max-width: 1200px;
       margin: 0 auto;
       padding: 0;
     }
@@ -69,7 +69,10 @@
     .header {
       width: 100%;
       height: 100%;
-      border-bottom: 1px solid #000;
+      background: -webkit-linear-gradient(90deg, #f0f0f0,#ffffff);
+      background: -moz-linear-gradient(90deg, #f0f0f0,#ffffff);
+      background: -o-linear-gradient(90deg, #f0f0f0,#ffffff);
+      background: -ms-linear-gradient(90deg, #f0f0f0,#ffffff);
     }
 
     .header .full_width .logo{
@@ -128,14 +131,12 @@
     .main-slider{
       width: 100%;
       height: auto;
-      background : #f5f5f5;
     }
 
     .main-slider #image-view{
       width : 100%;
       max-width: 100%;
       height : auto;
-      background: #f5f5f5;
     }
 
     .main-slider #image-view img {
@@ -147,13 +148,14 @@
     .main-content {
       width: 100%;
       height:900px;
+      background : #f0f0f0;
     }
 
     .main-content .inner-boxs {
       width: 100%;
-      height: 100%;
+      height: auto;
       padding: 8.75px 0;
-      background: #f5f5f5;
+      background: #f0f0f0;
     }
 
     .main-content .inner-boxs .small_box{
@@ -179,7 +181,6 @@
       width:48%;
       max-width: 100%;
       height:auto;
-      background: rgb(125, 180, 65);
     }
 
     .main-content .inner-boxs #welcome_box{ clear: both; }
@@ -187,7 +188,6 @@
     .main-content .inner-boxs #worshipVideo_box{
       clear:left;
       margin-top: 8.75px;
-      background: rgb(255, 240, 70);
     }
 
     /* footer section */
@@ -374,16 +374,16 @@
     </div>
 
     <div class="small_box" id="welcome_box">
-      <img src="resource/source_images/welcome.png" alt="환영합니다">
+      <img src="resource/source_images/welcome_ver2.0.png" alt="환영합니다">
     </div>
     <div class="small_box" id="vision_box">
-      <img src="resource/source_images/vision.png" alt="교회 비전">
+      <img src="resource/source_images/vision_ver2.0.png" alt="교회 비전">
     </div>
     <div class="small_box" id="worshipTime_box">
-      <img src="resource/source_images/worship_time.png" alt="예배시간">
+      <img src="resource/source_images/worship_time_ver2.0.png" alt="예배시간">
     </div>
     <div class="small_box" id="wayToCome_box">
-      <img src="resource/source_images/way_to_come.png" alt="오시는 길">
+      <img src="resource/source_images/way_to_come_ver2.0.png" alt="오시는 길">
     </div>
     </div>
     </div>
