--- a/SeoulJesusLoveChurch/main.html
+++ b/SeoulJesusLoveChurch/main.html
@@ -81,13 +81,6 @@
     .article { background-color: rgb(200, 250, 150); }
     .display { background-color: rgb(180, 255, 250); }
     .promotion { background-color: rgb(250, 240, 150); }
-    .footer {
-      width: 100%;
-      height: auto;
-      min-height: 100%;
-      background-color: rgb(120, 120, 120);
-      overflow:auto; }
-
     /* moblie(base) CSS */
 
     /* header session */
@@ -100,7 +93,7 @@
     .header .gnb li{ display: inline-block; float:left; text-align: center; }
     .header .gnb li a{ font-weight: bold; color:#4d4959; }
     .header .menu-toggle-btn{ display: inline; float:right; font-size: 1.25em; color:rgba(63, 81, 181);
-                              padding:2.5rem 0; margin-right: 1rem; }
+                              padding:2.5rem 0; margin-right: 5%; }
 
     .line { width: 100%; height:0; border: 0;
       border-top: 1px solid rgba(63, 81, 181, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -108,11 +101,14 @@
     }
 
     /* flexslider sesssion */
-    /* slide size */
-    .flex-container { background-color: #fff; padding: 1.25em 0; text-align: center;}
-    .flexslider { border:0px solid #fff;}
-    .flex-control-nav { bottom: -1.25em; }
-    .flex-control-paging li a {width:0.625em; height:0.625em;}
+
+    /* footer section */
+    .footer { width: 100%; background-color: #3b3838; padding: 2.5em 0; }
+    .footer .sub_logo { float:none; }
+    .footer .sub_logo img { display: block; margin: 0 auto; height: 3.75em; }
+    .footer .info { float:none; height: auto; padding: 1.25em 0; margin: 0 1.875em; color: #a6a6a6; font-weight: 500; }
+    .footer .info p { float: none; text-align: center; line-height: 150%; }
+    .footer .info #copyright{ font-size: 0.75em; }
 
     /* tablet CSS */
     @media all and (min-width:768px){
@@ -121,13 +117,13 @@
     .header{ postion: static; }
     .header .main_logo a img{ position: relative; left:0; margin-left:3.75em; height:3.125em; } /* 3.125em = 50px */
     .header nav { float:right; }
-    .header .gnb{ display: block !important; padding: 3em 0; }
+    .header .gnb{ display: block !important; padding: 3em 0; margin-right: 1.25em;}
     .header .gnb li{ padding: 0 0.625em; }
     .header .gnb li a {font-size: 0.875em;}
     .header .menu-toggle-btn{ display: none !important; }
 
     /* flexslider sesssion */
-    .flex-control-nav { bottom: 0.625em; }
+
     }
 
     /*   PC   CSS */
@@ -140,6 +136,14 @@
       .header .gnb{ padding:1.25em 25%; } /* 1.25em = 20px */
       .header .gnb li { width:20%; padding : 0; }
       .header .gnb li a {font-size: 1em;}
+
+      /* footer session */
+      .footer .sub_logo { float: left; margin: 0 1.875em; }
+      .footer .sub_logo img{ height: 5em; }
+      .footer .info { float:left; height: 5em; }
+      .footer .info #contact { padding-top: 0.75em; }
+      .footer .info #tel { float: left; margin-right: 1.875em;}
+      .footer .info #copyright { float:left; padding-top: 0.75em; }
     }
     </style>
 
@@ -162,27 +166,14 @@
         <li><a href="">COMMUNITY</a></li>
       </ul>
     </nav>
-
     <span class="menu-toggle-btn">
       <i class="fa fa-toggle-off fa-lg"></i>
     </span>
-
     </header>
 
     <hr class="line">
 
-    <section class="flex-container">
-      <div class="flexslider full_width">
-        <ul class="slides">
-          <li>
-            <img src="resource/picture_images/renewaling.png" />
-          </li>
-          <li>
-            <img src="resource/picture_images/come_early_10min.png" />
-          </li>
-        </ul>
-      </div>
-    </section>
+
 
     <div class="article">
     <p>article</p>
@@ -193,8 +184,21 @@
     <div class="promotion">
     <p>promotion</p>
     </div>
-    <footer class="footer">
-    footer
+
+    <footer class="footer clearfixed">
+      <div class="full_width">
+        <div class="sub_logo">
+          <img src="resource/sub_logo_ver3.0.png" alt="서울예수사랑교회 서브 로고">
+        </div>
+        <div class="info">
+          <p id="address">01125 서울특별시 강북구 도봉로 225 2층 (미아동 206-10)</p>
+          <div id="contact">
+            <p id="tel">Tel. 010 - 0000 - 0000</p>
+            <p id="fax">Fax. 070 - 0000 - 0000</p>
+          </div>
+          <p id="copyright">Copyright ⓒ SEOUL JESUS LOVE CHURCH. ALL RIGHTS RESERVED</p>
+        </div>
+      </div>
     </footer>
     </div>
   </body>
