Project_article session 수정
먼저 미디어에 맞추어서 대응될 수 있도록 폰트크기 및 포지셔닝 잡아 둠.

--- a/SeoulJesusLoveChurch/main.html
+++ b/SeoulJesusLoveChurch/main.html
@@ -106,12 +106,18 @@
     .flex-control-paging li a {width:0.625em; height:0.625em;}
 
     /* article session */
-    .article { padding: 1.75em 0; font-family: 'Nanum Myeongjo', serif !important;  text-align: center;}
-    .article .notify { font-size:1.1em; font-weight: bold; color: #4d4959}
-    .article .title { font-size:3.25em; font-family: 'Nanum Gothic','Malgun Gothic', "나눔고딕", "맑은고딕", Sans-serif, Helvetica !important; font-weight: bold; color: #4d4959; }
+    /* base style */
+    .article { margin: 0 1.25rem; padding: 1.875rem 0; font-family: 'Nanum Myeongjo', serif !important;  text-align: center;}
+    .article .notify { font-weight: bold; color: #4d4959}
+    .article .title { font-family: 'Nanum Gothic','Malgun Gothic', "나눔고딕", "맑은고딕", Sans-serif, Helvetica !important; font-weight: bold; color: #4d4959; }
     .article .title:before { content: " "; display: block; border: solid 1px #4d4959; width: 3.125rem; margin: 2.5rem auto; }
-    .article #acts_1_8 { font-size:1.25em; margin:3.75rem 0; font-style: oblique; font-weight: 300; color:#rgb(51, 51, 51);  line-height: 150%; }
-    .article .introduction { font-size:1em; color:#777; font-weight: 300; line-height: 200%; }
+    .article #acts_1_8 { margin:3.75rem 0; font-style: oblique; font-weight: 300; color:#rgb(51, 51, 51);  line-height: 150%; }
+    .article .introduction { color:#777; font-weight: 300; line-height: 200%; }
+
+    .article .notify { padding:0 0.9375rem; font-size:1em; line-height: 150%; }
+    .article .title { font-size:4.375em; }
+    .article #acts_1_8 { font-size: 1.125em; }
+    .article .introduction { text-align: center; padding:0 0; font-size:0.675em; }
 
     /* footer section */
     .footer { width: 100%; background-color: #3b3838; padding: 2.5em 0; }
@@ -140,7 +146,7 @@
     .article .notify { font-size: 1.125em; }
     .article .title { font-size: 3.125em; }
     .article #acts_1_8 { font-size: 1.25em; }
-    .article .introduction { font-size: 1.25em; }
+    .article .introduction { font-size: 1em; }
     }
 
     /*   PC   CSS */
@@ -221,11 +227,13 @@
           "오직 성령이 너희에게 임하시면 너희가 권능을 받고 예루살렘과 온 유대와<br />사마리아와 땅 끝까지 이르러 내 증인이 되리라 하시니라"<br/> [사도행전 1:8]
         </div>
         <div class="introduction">
-          이 말씀을 중심으로 그리스도의 한 몸으로 연합되어진 교회 중에 <br/>
-          <span class="main_color"><b>(NK에서 이스라엘까지)</b></span> 서진을 향해 한 걸음 한 걸음 나아가는 교회입니다. <br/>
+          이 말씀을 중심으로<br/>그리스도의 한 몸으로 연합되어진 교회 중에 <br/>
+          <span class="main_color"><b>(NK에서 이스라엘까지)</b></span> 서진을 향해<br/>한 걸음 한 걸음 나아가는 교회입니다. <br/>
           <br/>
-          <span class="main_color"><b>서울예수사랑교회</b></span>는 지역 사회 속에서 빛과 소금의 사명을 감당하고 (마 5:13-14) <br/>
-          상처입고 고통당하는 이웃과 친구 되어 (눅 10:30-37) <br/>
+          <span class="main_color"><b>서울예수사랑교회</b></span>는 지역 사회 속에서<br/>빛과 소금의 사명을 감당하고
+          <span class="main_color"><b>(마 5:13-14)</b></span><br/>
+          상처입고 고통당하는 이웃과 친구 되어
+          <span class="main_color"><b>(눅 10:30-37)</b></span><br/>
           그들과 함께 하고 예수 그리스도의 사랑과 손길을 전하는 교회입니다.
         </div>
       </div>
